--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".view.detailstory.DetailStoryActivity"
+            android:name=".view.detailproduct.DetailProductActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
